# armed-bandits

./: README.md  api.py  bandit_successive_elimination.py  bandit_system.py  bandit_ucb.py  bandits.py  main.py  pyproject.toml  simulator.py
src/: bandit_random.py  bandit_successive_elimination.py  bandit_system.py  bandit_ucb.py  utils.py
